// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deviceContentNav matches snapshot when the device is edge 1`] = `
<div
  className="nav-link-left"
  role="navigation"
>
  <StyledNavBase
    groups={
      [
        {
          "links": [
            {
              "iconProps": {
                "iconName": "Server",
              },
              "key": "identity",
              "name": "breadcrumb.identity",
              "url": "#/identity/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "ReopenPages",
              },
              "key": "twin",
              "name": "breadcrumb.twin",
              "url": "#/twin/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "Message",
              },
              "key": "events",
              "name": "breadcrumb.events",
              "url": "#/events/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "Remote",
              },
              "key": "methods",
              "name": "breadcrumb.methods",
              "url": "#/methods/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "Mail",
              },
              "key": "cloudToDeviceMessage",
              "name": "breadcrumb.cloudToDeviceMessage",
              "url": "#/cloudToDeviceMessage/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "TFVCLogo",
              },
              "key": "moduleIdentity",
              "name": "breadcrumb.moduleIdentity",
              "url": "#/moduleIdentity/?deviceId=test",
            },
          ],
        },
      ]
    }
  />
</div>
`;

exports[`deviceContentNav matches snapshot when the device is not edge 1`] = `
<div
  className="nav-link-left"
  role="navigation"
>
  <StyledNavBase
    groups={
      [
        {
          "links": [
            {
              "iconProps": {
                "iconName": "Server",
              },
              "key": "identity",
              "name": "breadcrumb.identity",
              "url": "#/identity/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "ReopenPages",
              },
              "key": "twin",
              "name": "breadcrumb.twin",
              "url": "#/twin/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "Message",
              },
              "key": "events",
              "name": "breadcrumb.events",
              "url": "#/events/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "Remote",
              },
              "key": "methods",
              "name": "breadcrumb.methods",
              "url": "#/methods/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "Mail",
              },
              "key": "cloudToDeviceMessage",
              "name": "breadcrumb.cloudToDeviceMessage",
              "url": "#/cloudToDeviceMessage/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "TFVCLogo",
              },
              "key": "moduleIdentity",
              "name": "breadcrumb.moduleIdentity",
              "url": "#/moduleIdentity/?deviceId=test",
            },
            {
              "iconProps": {
                "iconName": "PlugDisconnected",
              },
              "key": "ioTPlugAndPlay",
              "name": "breadcrumb.ioTPlugAndPlay",
              "url": "#/ioTPlugAndPlay/?deviceId=test",
            },
          ],
        },
      ]
    }
  />
</div>
`;
